# code-to-module

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
cli-reference/: index.html
contributing/: index.html
docs/: architecture.md  cli-reference.md  contributing.md  index.md  known-limitations.md  user-guide.md
known-limitations/: index.html
search/: search_index.json
site/: 404.html  index.html
site/cli-reference/: index.html
site/contributing/: index.html
site/development-tutorial/: index.html
site/known-limitations/: index.html
site/search/: search_index.json
site/user-guide/: index.html
src/code_to_module/: __init__.py  api.py  assess.py  bioconda.py  cli.py  container.py  discover.py  fix.py  generate.py  infer.py  ingest.py  models.py  quick_lint.py  regression.py  review.py  test_data_derive.py  test_data_match.py  test_gen.py  validate.py  validate_cli.py
src/code_to_module/data/: nf_core_standards.json
src/code_to_module/standards/: __init__.py  loader.py
src/code_to_module/templates/: Dockerfile.j2  environment.yml.j2  main.nf.j2  meta.yml.j2
tests/: conftest.py  discovery_targets.py  test_api.py  test_assess.py  test_bioconda.py  test_chain.py  test_cli.py  test_container_discover.py  test_container_select.py  test_discover.py  test_discovery_robustness.py  test_end_to_end.py  test_fix.py  test_generate.py  test_import_boundaries.py  test_infer.py  test_ingest.py  test_llm_contract.py  test_quick_lint.py  test_regression.py  test_review.py  test_standards.py  test_standards_drift.py  test_test_data_derive.py  test_test_data_match.py  test_validate.py
tests/fixtures/: complex_pipeline.sh  simple_script.py
tests/fixtures/repo_argparse_subcommands/: tool.py
tests/fixtures/repo_click_multi/: mytool.py
tests/fixtures/repo_console_scripts_flat/: setup.py
tests/fixtures/repo_console_scripts_meg/: setup.py
tests/fixtures/repo_console_scripts_subparsers/: setup.py
tests/fixtures/repo_multi_scripts/: align.py  index.py  sort.py
tests/fixtures/repo_no_container/: main.py
tests/fixtures/repo_shell_case/: mytool.sh
tests/fixtures/repo_with_both/: Dockerfile  environment.yml  main.py
tests/fixtures/repo_with_dockerfile/: main.py
user-guide/: index.html
(+29 files in other folders)
